--- a/BaconBackground/BaconBackground.csproj
+++ b/BaconBackground/BaconBackground.csproj
@@ -96,8 +96,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights.WindowsApps">
-      <Version>1.1.1</Version>
+    <PackageReference Include="Microsoft.ApplicationInsights">
+      <Version>2.5.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.8</Version>
